- Refactor - Method for reading pricelist - english atrribut names