@@ -8,7 +8,9 @@ public class FileHandler {
 
 	public List<HitList> readHitlist() {
 		Vector<String[]> lines = new Vector<String[]>();
-		List<HitList> hitliste = new ArrayList<HitList>();
+		List<HitList> hitlist = new ArrayList<HitList>();
+		Integer mealPlacement = null;
+		String mealName = null;
 
 		try {
 			CSVTokenizer csv = new CSVTokenizer(
@@ -19,58 +21,88 @@ public class FileHandler {
 			}
 			for (int i = 0; i <= lines.size() - 1; i++) {
 
-				Integer id = Integer.valueOf(lines.get(i)[0]);
-				String nameOfMeal = lines.get(i)[1];
-				HitList oneHitListItem = new HitList(id, nameOfMeal);
-				hitliste.add(oneHitListItem);
+				mealPlacement = Integer.valueOf(lines.get(i)[0]);
+				mealName = lines.get(i)[1];
+				HitList oneHitListItem = new HitList(mealPlacement, mealName);
+				hitlist.add(oneHitListItem);
 			}
 		} catch (FileNotFoundException e) {
 			e.printStackTrace();
 		} catch (ParseException e) {
 			e.printStackTrace();
 		}
-		return hitliste;
+		return hitlist;
 	}
 
-	public static void main(String[] args) {
-
+	public static List<PriceList> readPriceList() {
+		
 		Vector<String[]> lines = new Vector<String[]>();
-		List<PriceList> preisliste = new ArrayList<PriceList>();
-
+		List<PriceList> pricelist = new ArrayList<PriceList>();
+		String typeOfTrader = null;
+		String nameOfTrader = null;
+		String transportCost = null;
+		Integer itemSize = null;
+		String unitSize = null;
+		String nameIngredient = null;
+		String typeIngredient = null;
+		String price = null;
+		Integer existingQuantity = null;
+		float priceFloat = 0;
+		float transportCostFloat = 0;
+		
 		try {
 			CSVTokenizer csv = new CSVTokenizer(
 					"/Users/frato/Desktop/preisliste_1.csv", ',');
 			while (csv.hasMoreLines()) {
 				lines.add(csv.nextLine());
 			}
-
-			String artDesHaendler = lines.get(0)[0];
-			String nameDesHaendler = lines.get(0)[1];
-			String transportKosten = lines.get(0)[2].replace(",", ".");
-			float transportKostenFloat = new Float(transportKosten);
+			
+			// CSV Header
+			typeOfTrader = lines.get(0)[0];
+			nameOfTrader = lines.get(0)[1];
+			transportCost = lines.get(0)[2].replace(",", ".");
+			transportCostFloat = new Float(transportCost);
+			
 			for (int i = 1; i <= lines.size() - 1; i++) {
 
-				Integer groesseGebinde = Integer.valueOf(lines.get(i)[0]);
-				String massEinheit = lines.get(i)[1];
-				String nameDerZutat = lines.get(i)[2];
-				String artDerZutat = lines.get(i)[3];
-				String preis = lines.get(i)[4].replace(",", ".");
-				Integer vorhandeneMenge = Integer.valueOf(lines.get(i)[5]);
-				float preisFloat = new Float(preis);
-
-				PriceList onePriceListItem = new PriceList(artDesHaendler,
-						nameDesHaendler, transportKostenFloat, groesseGebinde,
-						massEinheit, nameDerZutat, artDerZutat, preisFloat,
-						vorhandeneMenge);
-				preisliste.add(onePriceListItem);
+					itemSize = Integer.valueOf(lines.get(i)[0]);
+					unitSize = lines.get(i)[1];
+					nameIngredient = lines.get(i)[2];
+					typeIngredient = lines.get(i)[3];
+					price = lines.get(i)[4].replace(",", ".");
+					existingQuantity = Integer.valueOf(lines.get(i)[5]);
+					priceFloat = new Float(price);
+				
+				
+				
+				
+			PriceList onePriceListItem = new PriceList(typeOfTrader,
+					nameOfTrader, transportCostFloat, itemSize,
+					unitSize, nameIngredient, typeIngredient, priceFloat,
+					existingQuantity);
+			
+			pricelist.add(onePriceListItem);
+				
+				
+//				System.out.println(typeOfTrader+ " " +
+//						nameOfTrader + " " + transportCostFloat+ " " +itemSize+ " " +
+//						unitSize+ " " +nameIngredient+ " " +typeIngredient+ " " +priceFloat+ " " +
+//						existingQuantity);
+				
 			}
-			System.out.println(preisliste.size());
-
+			
 		} catch (FileNotFoundException e) {
 			e.printStackTrace();
 		} catch (ParseException e) {
 			e.printStackTrace();
 		}
+		
+		return pricelist;
+	}
+
+	public static void main(String[] args) {
+		
+		readPriceList();
 
 	}
 
